# KubeAtlas

./: .env.example  .gitignore  Makefile  README.md  Untitled  go.mod  go.sum  test.py
cmd/api/: main.go
cmd/graph/: main.go
cmd/ingest/: main.go
cmd/worker/: main.go
deploy/: docker-compose.yml
deploy/k8s/: 00-namespace.yaml  audit-policy.yaml  sample-demo.yaml
docs/: ARCHITECTURE.md  DATABASE_WORKFLOW.md  DEVELOPMENT.md  EXECUTION_FLOW.md  FLOW.md  KUBEATLAS.md  PLAN.md  QUICKSTART.md  README.md  ROADMAP.md  RUN.md  SCOPE.md
internal/ai/: client.go
internal/collector/: collector.go
internal/config/: config.go
internal/context/: builder.go
internal/domain/: atlas.go
internal/execution/: executor.go
internal/graph/: builder.go
internal/health/: engine.go
internal/incidents/: engine.go
internal/ingest/: resources.go  service.go  tail.go  watcher.go
internal/investigator/: investigator.go
internal/k8sclient/: client.go
internal/models/: models.go
internal/pipeline/: ai.go  orchestrator.go  runner.go
internal/ports/: atlas.go
internal/realtime/: hub.go
migrations/: 001_init.sql  002_add_graph_node_id.sql  003_kubeatlas.sql
scripts/: check-dashboard-resources.sh  check-pipeline.sh  phase0-setup-kind.sh  phase0-verify.sh  phase1-verify.sh  seed-demo.sh  start-dev.sh
services/ai/: Dockerfile  README.md  pyproject.toml  requirements.txt
services/ai/app/: __init__.py  k8s.py  llm.py  main.py  schemas.py
services/ai/tests/: test_api.py
web/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
(+36 files in other folders)
