[project]
name = "kubeatlas-ai"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.9.0",
  "langchain-core>=0.3.0",
  "langchain-openai>=0.2.0",
  "langchain-anthropic>=0.2.0",
  "kubernetes>=26.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
